# PrepGuardian

./: .gitignore  README.md  skills-lock.json
.agents/rules/: backend-code-rule.md  frontend-code-rule.md
.agents/skills/insight-generation/: SKILL.md
.agents/skills/insight-generation/references/: concept-radar.md  confidence-map.md  market-gap.md  report-compiler.md
backend/: .gitignore  main.py  pyproject.toml
backend/app/: config.py  constants.py  dependencies.py  logger.py  models.py  prompts.py  security.py
backend/app/db/: __init__.py  mongo.py  redis.py  sqlite.py
backend/app/routes/: agent.py  auth.py  conversations.py  users.py
backend/app/schemas/: __init__.py  auth.py  conversations.py  insights.py  users.py
backend/app/services/: agent_service.py  auth_service.py  conversation_service.py  insight_service.py  live_session_service.py  user_service.py
backend/tests/: test_auth_service.py  test_insight_pipeline.py  test_live_session_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmationModal.tsx  Login.tsx  Onboarding.tsx  Transcripts.tsx  VoiceAgent.tsx
frontend/src/lib/: api.ts  auth.tsx  logger.ts  session.ts
public/: PrepGuardian_Description.md  prompts_written_to_build_this.txt
